FIX: Logo on mobile navbar getting stretched when hambuger button clicked

--- a/app/assets/stylesheets/default-style.css
+++ b/app/assets/stylesheets/default-style.css
@@ -86,7 +86,7 @@ body {
 
     .footer-left {
         margin-top: 1em;
-        margin-bottom: 2em;
+        margin-bottom: 3em;
     }
 
     .footer-right {
